base/rollout.yaml
apiVersion: argoproj.io/v1alpha1
kind: Rollout
metadata:
  name: java-app
spec:
  replicas: 4
  revisionHistoryLimit: 5
  strategy:
    canary:
      trafficRouting:
        nginx:
          stableService: java-app-stable
          canaryService: java-app-canary
          rootService: java-app-root
          annotationPrefix: nginx.ingress.kubernetes.io
      maxSurge: 1
      maxUnavailable: 0
      analysis:
        templates:
          - templateName: success-rate-check
        args:
          - name: service-name
            value: java-app-stable
        startingStep: 1
        successfulRunHistoryLimit: 2
        unsuccessfulRunHistoryLimit: 2
      steps:
        - setWeight: 20
        - pause: { duration: 1m }
        - analysis:
            templates:
              - templateName: success-rate-check
        - setWeight: 50
        - pause: { duration: 2m }
        - setWeight: 100
        - pause: {}
  selector:
    matchLabels:
      app: java-app
  template:
    metadata:
      labels:
        app: java-app
    spec:
      containers:
        - name: java-container
          image: vikasprince/java-app:latest
          ports:
            - containerPort: 8080
          resources:
            limits:
              memory: "1024Mi"
              cpu: "1000m"
            requests:
              memory: "512Mi"
              cpu: "500m"
          livenessProbe:
            httpGet:
              path: /
              port: 8080
            initialDelaySeconds: 30
            periodSeconds: 10
            timeoutSeconds: 2
            failureThreshold: 3
          readinessProbe:
            httpGet:
              path: /
              port: 8080
            initialDelaySeconds: 15
            periodSeconds: 5
            timeoutSeconds: 2
            failureThreshold: 2
          securityContext:
            runAsUser: 1000
            runAsGroup: 3000
            runAsNonRoot: true
            allowPrivilegeEscalation: false
            readOnlyRootFilesystem: true
            capabilities:
              drop:
                - ALL
      securityContext:
        fsGroup: 2000
