base/service-root.yaml
apiVersion: v1
kind: Service
metadata:
  name: java-app-root
spec:
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
