base/networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: java-app-deny-all
spec:
  podSelector:
    matchLabels:
      app: java-app
  policyTypes:
    - Ingress
    - Egress
